tests/error/effects_errors/pure_calls_impure_def.err
Error: Too many effects (at $FILE:11:10)
   | 
 9 | @guppy(max_effects=[])
10 | def main() -> int:
11 |    return impure_func(5)
   |           ^^^^^^^^^^^^^^ Callee of type `int -> int` has effects <UNKNOWN>
   |                          that exceed the allowed effects `[]`

Guppy compilation failed due to 1 previous error
